# KSJ-Recon

./: .env  .env.example  .gitignore  Nmap.py  README.md  env  gitignore  nmap_result.json  prompt.txt  pyproject.toml  recon.py  report.json  requirements.txt
XSS/: README.md  browser_verifier.py  context_analyzer.py  input.example.json  input.json  login.py  login_mock.json  payloads.py  preprocess_data_new1.json  recon_report.json  reflected_xss.py  requirements.txt  result_builder.py  stored_xss.py  test_real.py  test_unit.py  xss_cli.py  xss_scanner.py
attacker_module_3/: .gitignore  pyproject.toml  requirements.txt
attacker_module_3/attacker_module_3/: README.md
attacker_module_3/attacker_module_3/common/: base.py  detector.py  injector.py
attacker_module_3/common/: README.md  __init__.py  base.py  detector.py  exceptions.py  http.py  injector.py  io.py  result.py  target.py
attacker_module_3/common/tests/: test_detector.py  test_injector.py  test_io.py
attacker_module_3/dast_attacker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
attacker_module_3/file_download/: README.md  __init__.py  module.py  payloads.py
attacker_module_3/file_download/samples/: targets.yaml
attacker_module_3/file_download/tests/: test_file_download_module.py
attacker_module_3/ssrf/: README.md  __init__.py  module.py  payloads.py
attacker_module_3/ssrf/samples/: targets.yaml
attacker_module_3/ssrf/tests/: test_ssrf_module.py
auth/: __init__.py  detector.py  form_analyzer.py  login.py  models.py
core/: entry_core.py  middle_core.py  modeA_core.py
(+155 files in other folders)
