[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ksj-crawler"
version = "0.1.0"
description = "Recon crawler — Playwright-driven web crawler with auth detection, JS analysis, and SPA route discovery."
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.50",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["crawler*"]
