[project]
name = "dast-attacker"
version = "0.1.0"
description = "DAST attack modules: SSRF and File Download (path traversal)"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Leelsey" }]
dependencies = [
    "requests>=2.32",
    "PyYAML>=6.0",
    "playwright>=1.40",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["common", "ssrf", "file_download"]

[tool.pytest.ini_options]
#addopts = "-q"
testpaths = ["common/tests", "ssrf/tests", "file_download/tests"]
